# udacity-data-engineering-nanodegree

./: .gitignore  README.md
capstone-project/: .env.local  Dockerfile  Dockerfile-spark  README.md  create_tables.sql  dbdiagram.txt  docker-compose-spark.yaml  docker-compose.spark.yaml  docker-compose.yaml  pyproject.toml
capstone-project/data/: GlobalLandTemperaturesByCity-small.csv  worldbank-country-profile-small.json
capstone-project/example_dags/: submit_spark_job.py
capstone-project/mnt/dags/: climate_change_with_worldbank_data_pipeline.py  worldbank_data_pipeline.py
capstone-project/mnt/plugins/: __init__.py
capstone-project/mnt/plugins/operators/: __init__.py  stage_redshift.py
capstone-project/notebooks/: etl.ipynb  transform.ipynb
capstone-project/spark/app/: data_processing.py  global_temperature_data_processing.py  worldbank_data_processing.py
cloud-data-warehouses/: README.md  create_tables.py  dwh.cfg  etl.py  etl_with_small_data.py  pyproject.toml  sql_queries.py
data-lakes-with-spark/: README.md  etl-local.ipynb  etl.py  etl_local.ipynb  pyproject.toml  setup.cfg
data-modeling-with-cassandra/: Project_1B_ Project_Template.ipynb  README.md  data_modeling_with_cassandra.ipynb  pyproject.toml
data-modeling-with-postgres/: README.md  create_tables.py  docker-compose.yml  etl.ipynb  etl.py  pyproject.toml  setup.cfg  sql_queries.py  test.ipynb  test_data_quality.py
data-pipelines-with-airflow/: README.md  docker-compose.yml  pyproject.toml
data-pipelines-with-airflow/mnt/: create_tables.sql
data-pipelines-with-airflow/mnt/dags/: song_play_etl_pipeline.py  udac_example_dag.py
data-pipelines-with-airflow/mnt/plugins/: __init__.py
data-pipelines-with-airflow/mnt/plugins/helpers/: __init__.py  sql_queries.py
data-pipelines-with-airflow/mnt/plugins/operators/: __init__.py  data_quality.py  load_dimension.py  load_fact.py  stage_redshift.py
