[tool.poetry]
name = "data-modeling-with-postgres"
version = "0.1.0"
description = "Data Modeling with Postgres"
authors = ["Kan Ouivirach <zkan.cs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
