[tool.poetry]
name = "data-modeling-with-postgres"
version = "0.1.0"
description = "Data Modeling with Postgres"
authors = ["Kan Ouivirach <zkan.cs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.2"
jupyter = "^1.0.0"
ipython-sql = "^0.4.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
